--- a/index.html
+++ b/index.html
@@ -859,14 +859,16 @@
   
        function sendmail(){
       
-        var name = $('#Name').val();
-        var email = $('#Sender').val();
-        var subject = $('#Subject').val();
-              var message = $('#Message').val();
+        var name = document.getElementById("form_name").value;
+        var email = document.getElementById("form_email").value;
+        var subject = document.getElementById("form_subject").value;
+        var message = document.getElementById("form_message").value;
+        // console.log(inputVal)
   
         // var body = $('#body').val();
   
         var Body='Name: '+name+'<br>Email: '+email+'<br>Subject: '+subject+'<br>Message: '+message;
+        console.log(Body)
         //console.log(name, phone, email, message);
   
         Email.send({
