--- a/index.html
+++ b/index.html
@@ -859,10 +859,10 @@
   
        function sendmail(){
       
-        var name = $('#Name').val();
-        var email = $('#Sender').val();
-        var subject = $('#Subject').val();
-              var message = $('#Message').val();
+        var name = document.getElementById("form_name").value;
+        var email = document.getElementById("form_email").value;
+        var subject = document.getElementById("form_subject").value;
+        var message = document.getElementById("form_message").value;
   
         // var body = $('#body').val();
   
