--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                             <a class="filter btn btn-sm btn-link" data-group="category_ml">Machine Learnig</a>
                           </li>
                           <li>
-                            <a class="filter btn btn-sm btn-link" data-group="category_ai">AI</a>
+                            <a class="filter btn btn-sm btn-link" data-group="category_ocv">Oprn CV</a>
                           </li>
                           <!-- <li>
                             <a class="filter btn btn-sm btn-link" data-group="category_youtube-videos">YouTube Videos</a>
@@ -646,7 +646,7 @@
                             <span class="category">Exploratory Data Analysis on dataset of Bank Marketing</span>
                           </figure>
 
-                          <figure class="item standard" data-groups='["category_all", "category_ai"]'>
+                          <figure class="item standard" data-groups='["category_all", "category_ocv"]'>
                             <div class="portfolio-item-img">
                               <img src="img/project/painter.jpg" alt="Bank Marketing" title="" />
                               <a href="https://github.com/rhythmbhavsar/AI-Virtual-Painter" target="blank" ></a>
@@ -690,7 +690,7 @@
                             <span class="category">Data analysis on Diabetes dataset</span>
                           </figure>
 
-                          <figure class="item lbimage" data-groups='["category_all", "category_ai"]'>
+                          <figure class="item lbimage" data-groups='["category_all", "category_ocv"]'>
                             <div class="portfolio-item-img">
                               <img src="img/project/trainer.jpg" alt="Mockup Design 1" title="" />
                               <a href="https://github.com/rhythmbhavsar/AI-Trainer" target="blank"></a>
