--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                             <a class="filter btn btn-sm btn-link" data-group="category_ml">Machine Learnig</a>
                           </li>
                           <li>
-                            <a class="filter btn btn-sm btn-link" data-group="category_ocv">Oprn CV</a>
+                            <a class="filter btn btn-sm btn-link" data-group="category_ocv">Open CV</a>
                           </li>
                           <!-- <li>
                             <a class="filter btn btn-sm btn-link" data-group="category_youtube-videos">YouTube Videos</a>
