Rhythm - Portfolio | Version : 2.0

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="header-buttons">
-              <a href="cv/Resume.pdf" download="Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
+              <a href="cv/Rhythm Bhavsar's Resume.pdf" download="Rhythm Bhavsar's Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
             </div>
 
             <div class="copyrights">© 2022 All rights reserved.</div>
