Changes in portfolio

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                           
                           <figure class="item lbaudio" data-groups='["category_all", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/olympic.png" alt="Bank Marketing" title="" />
+                              <img src="img/project/olympic.png" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Olympic-" target="blank" title="Bank Marketing"></a>
                             </div>
                             
@@ -725,7 +725,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_ps"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/airlines.jfif" alt="Bank Marketing" title="" />
+                              <img src="img/project/airlines.jfif" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Airlines-Analysis-Pyspark-" target="blank" ></a>
                             </div>
 
@@ -736,7 +736,7 @@
 
                           <figure class="item lbvideo" data-groups='["category_all", "category_sql"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/churn.png" alt="Vimeo Video 1" title="" />
+                              <img src="img/project/churn.png" alt="Vimeo Video 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Normalizing-Churn-Database" target="blank" ></a>
                             </div>
 
@@ -747,7 +747,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_ai"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/volume.png" alt="Media Project 1" title="" />
+                              <img src="img/project/volume.png" alt="Media Project 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/AI-Volume-Controller" target="blank"></a>
                             </div>
 
@@ -758,7 +758,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_ws", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/scrapping.png" alt="Mockup Design 1" title="" />
+                              <img src="img/project/scrapping.png" alt="Mockup Design 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Web-Scrapping" target="blank"></a>
                             </div>
 
@@ -769,7 +769,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_wb"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/cake.png" alt="Mockup Design 1" title="" />
+                              <img src="img/project/cake.png" alt="Mockup Design 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Cake-Studio-Website" target="blank"></a>
                             </div>
 
@@ -780,7 +780,7 @@
 
                           <figure class="item lbaudio" data-groups='["category_all", "category_ai"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/trainer.jpg" alt="Bank Marketing" title="" />
+                              <img src="img/project/trainer.jpg" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/AI-Trainer" target="blank" title="Bank Marketing"></a>
                             </div>
 
@@ -791,7 +791,7 @@
 
                           <figure class="item lbaudio" data-groups='["category_all", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/bank.jpeg" alt="Bank Marketing" title="" />
+                              <img src="img/project/bank.jpeg" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Bank-Marketing" target="blank" title="Bank Marketing"></a>
                             </div>
 
@@ -802,7 +802,7 @@
 
                           <figure class="item lbvideo" data-groups='["category_all", "category_ps"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/olympic.png" alt="Vimeo Video 1" title="" />
+                              <img src="img/project/olympic.png" alt="Vimeo Video 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Olympic--Pyspark-Analysis" target="blank" ></a>
                             </div>
 
@@ -813,7 +813,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_sql"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/employee.jfif" alt="Media Project 1" title="" />
+                              <img src="img/project/employee.jfif" alt="Media Project 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Employee-SQL-Analysis" target="blank"></a>
                             </div>
 
@@ -824,7 +824,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_ai"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/fingers.png" alt="Mockup Design 1" title="" />
+                              <img src="img/project/fingers.png" alt="Mockup Design 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Finger-Counter" target="blank"></a>
                             </div>
 
@@ -835,7 +835,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_ad"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/notes.jfif" alt="Mockup Design 1" title="" />
+                              <img src="img/project/notes.jfif" alt="Mockup Design 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Notes-Vault-App" target="blank"></a>
                             </div>
 
@@ -846,7 +846,7 @@
 
                           <figure class="item lbaudio" data-groups='["category_all", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/corona.jfif" alt="Bank Marketing" title="" />
+                              <img src="img/project/corona.jfif" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Corona_Analysis" target="blank" title="Bank Marketing"></a>
                             </div>
 
@@ -857,7 +857,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_sql"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/olympic.png" alt="Bank Marketing" title="" />
+                              <img src="img/project/olympic.png" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Olympic-SQL-Analysis" target="blank" ></a>
                             </div>
 
@@ -868,7 +868,7 @@
 
                           <figure class="item lbvideo" data-groups='["category_all", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/churn.png" alt="Vimeo Video 1" title="" />
+                              <img src="img/project/churn.png" alt="Vimeo Video 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Customer-Churn" target="blank" ></a>
                             </div>
 
@@ -879,7 +879,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_ai"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/painter.jpg" alt="Bank Marketing" title="" />
+                              <img src="img/project/painter.jpg" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/AI-Virtual-Painter" target="blank" ></a>
                             </div>
 
@@ -890,7 +890,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_stats", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/diabetes.jpg" alt="Mockup Design 1" title="" />
+                              <img src="img/project/diabetes.jpg" alt="Mockup Design 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Diabetes-" target="blank"></a>
                             </div>
 
@@ -912,7 +912,7 @@
 
                           <figure class="item lbaudio" data-groups='["category_all", "category_sql]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/hotel.jfif" alt="Bank Marketing" title="" />
+                              <img src="img/project/hotel.jfif" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Hotel-SQL-Analysis" target="blank" title="Bank Marketing"></a>
                             </div>
 
@@ -923,7 +923,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/supermarket.jpg" alt="Bank Marketing" title="" />
+                              <img src="img/project/supermarket.jpg" alt="Bank Marketing" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Supermarket" target="blank" ></a>
                             </div>
 
@@ -934,7 +934,7 @@
 
                           <figure class="item lbvideo" data-groups='["category_all", "category_eda"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/project/house.png" alt="Vimeo Video 1" title="" />
+                              <img src="img/project/house.png" alt="Vimeo Video 1" title="" width="300" height="150"/>
                               <a href="https://github.com/rhythmbhavsar/Housing" target="blank" ></a>
                             </div>
 
