modification in blogs section

--- a/index.html
+++ b/index.html
@@ -1539,9 +1539,9 @@
 
       Email.send({
         SecureToken: "fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
-        Host: "smtp.gmail.com",
+        Host: "smtp.elasticemail.com",
         Username: "rhythm.portfolio@gmail.com",
-        Password: "Rhythm@ani.25",
+        Password: "C16A0A836A0B914D4659F9F6D00DB3EB902A",
         To: 'rhythm.portfolio@gmail.com',
         From: "rhythmdb0525@gmail.com",
         Subject: "New message on contact from " + name,
