Resume Preview changes

--- a/index.html
+++ b/index.html
@@ -100,10 +100,14 @@
           </ul>
         </div>
 
-        <div class="header-buttons">
+        <!-- <div class="header-buttons">
           <a href="cv/Rhythm Bhavsar's Resume.pdf" download="Rhythm Bhavsar's Resume.pdf" target="_blank"
             class="btn btn-primary">Download CV</a>
-        </div>
+        </div> -->
+        <div class="header-buttons">
+          <a href="cv/Rhythm Bhavsar's Resume.pdf" target="_blank" class="btn btn-primary">Preview CV</a>
+      </div>
+      
 
         <div class="copyrights">© <span id="yearPlaceholder"></span> All rights reserved.</div>
       </header>
