--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
                       <li>
                         <span class="title">Address</span>
-                        <span class="value">62, Sudan St, Dorchester, MA, 02125</span>
+                        <span class="value">Boston, MA</span>
                       </li>
 
                       <!-- <li>
